--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "firebase": "^9.22.0"
+    "firebase": "^9.22.0",
+    "hero-slider": "^3.1.0"
   },
   "devDependencies": {
     "firebase-tools": "^12.0.0"
