--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "@types/react-transition-group": "^4.4.6",
     "firebase": "^9.22.0",
-    "hero-slider": "^3.1.0"
+    "hero-slider": "^3.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "firebase-tools": "^12.0.0"
