--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@mui/material": "^5.12.3",
+    "@mui/styled-engine": "^6.1.2",
     "@mui/x-date-pickers": "^6.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
+    "firebase": "^10.14.0",
     "react": "^18.2.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-datepicker": "^4.11.0",
