--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hero-slider": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scroll": "^1.8.9",
     "swiper": "^9.3.2"
   },
