--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "build",
+    "public": "my-app/build",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -22,5 +22,4 @@
     },
     "singleProjectMode": true
   }
-  
 }
